--- a/emloyment-nodejs/project-sw/package.json
+++ b/emloyment-nodejs/project-sw/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:": "NODE_ENV=production node server.js"
+    "start:": "cross-env NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
